--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,28 +1,34 @@
-<div type="pills">
-<uib-tabset>
-<uib-tab ng-repeat = "product in productsSet.products">
-	<uib-tab-heading>
-	<ul class="nav nav-pills">
+<div type="pills" class="productsSet">
+<uib-tabset class="productsTabset">
+<uib-tab ng-repeat = "product in productsSet.products" class="productsTab">
+	<uib-tab-heading class="transclude productHeading">
+	<ul class="nav" ng-class="{'nav-stacked': vertical, 'nav-justified': justified}">
 	<li>{{product.productname}}</li>
 	<li>{{product.cost}}</li>		
 	</ul>
 	</uib-tab-heading>
-	<ul>
+	<div class="centerDiv">
+	<ul class="superImpFeatures">
 		<li ng-repeat="superImpFeature in product.description.superImpFeatures">
 			{{superImpFeature}}
+			<span class="glyphicon glyphicon-plus orangeColor"></span> 
 		</li>
 	</ul>
-	<ul>
+	</div>
+	<ul class="impFeatures">
+
 		<li ng-repeat="impFeature in product.description.impFeatures">
+		<span class="glyphicon glyphicon-ok whiteColor"></span>
 			{{impFeature}}
 		</li>
 	</ul>
-	<ul>
+	<ul class="norFeatures">
 		<li ng-repeat="norFeature in product.description.norFeatures">
+		<span class="glyphicon glyphicon-ok orangeColor"></span>
 		{{norFeature}}
 		</li>
 	</ul>	
-	<button ng-click="addToCart(product)">Add to cart</button>
+	<button ng-click="addToCart(product)" class="addToCart">Add to cart</button>
 </uib-tab>
 </uib-tabset>
 </div>
