--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -32,7 +32,7 @@
 </uib-tab>
 </uib-tabset>
 </div>
-<div style="padding-left: 20px">
+<div class="cartList">
 <div ng-repeat ="item in cart.items">
 <div class="row">
 	<div class="col">
